[Java 17] Update src/main/java/com/example/java8/stream/ParallelStreamProcessor.java from Jira ticket JAVA-59
- Timestamp: 2024-12-04 19:21:15
- Source: Jira code review
- Ticket: JAVA-59
- File: src/main/java/com/example/java8/stream/ParallelStreamProcessor.java
- Branch: testing
- Type: Java 17 conversion